ir/ir_builder.h

// Validation and Optimization
bool ir_validate_component(IRComponent* component);
void ir_optimize_component(IRComponent* component);
// Hit Testing
bool ir_is_point_in_component(IRComponent* component, float x, float y);
IRComponent* ir_find_component_at_point(IRComponent* root, float x, float y);
void ir_set_rendered_bounds(IRComponent* component, float x, float y, float width, float height);
// Dropdown Convenience Function and State Helpers
IRComponent* ir_dropdown(const char* placeholder, char** options, uint32_t option_count);
int32_t ir_get_dropdown_selected_index(IRComponent* component);
void ir_set_dropdown_selected_index(IRComponent* component, int32_t index);
void ir_set_dropdown_options(IRComponent* component, char** options, uint32_t count);
bool ir_get_dropdown_open_state(IRComponent* component);
void ir_set_dropdown_open_state(IRComponent* component, bool is_open);
void ir_toggle_dropdown_open_state(IRComponent* component);
int32_t ir_get_dropdown_hovered_index(IRComponent* component);
void ir_set_dropdown_hovered_index(IRComponent* component, int32_t index);
// Animation and Keyframe Creation
IRAnimation* ir_animation_create_keyframe(const char* name, float duration);
void ir_animation_set_iterations(IRAnimation* anim, int32_t count);  // -1 = infinite
void ir_animation_set_alternate(IRAnimation* anim, bool alternate);
void ir_animation_set_delay(IRAnimation* anim, float delay);
void ir_animation_set_default_easing(IRAnimation* anim, IREasingType easing);
// Keyframe management
IRKeyframe* ir_animation_add_keyframe(IRAnimation* anim, float offset);  // offset 0.0-1.0
void ir_keyframe_set_property(IRKeyframe* kf, IRAnimationProperty prop, float value);
void ir_keyframe_set_color_property(IRKeyframe* kf, IRAnimationProperty prop, IRColor color);
// Attach animation to component
void ir_component_add_animation(IRComponent* component, IRAnimation* anim);
// Re-propagate animation flags after tree construction
// Call this after all components are created and added to fix flag propagation
void ir_animation_propagate_flags(IRComponent* root);
// General component subtree finalization (post-construction propagation)
// Call this after adding children (especially from static loops) to ensure all
// post-construction propagation steps are performed
void ir_component_finalize_subtree(IRComponent* component);
// Transition creation
IRTransition* ir_transition_create(IRAnimationProperty property, float duration);
void ir_transition_destroy(IRTransition* transition);
void ir_transition_set_easing(IRTransition* transition, IREasingType easing);
void ir_transition_set_delay(IRTransition* transition, float delay);
void ir_transition_set_trigger(IRTransition* transition, uint32_t state_mask);
// Attach transition to component
void ir_component_add_transition(IRComponent* component, IRTransition* transition);
// Helper: Create common animations
IRAnimation* ir_animation_fade_in_out(float duration);  // Fade in then out
IRAnimation* ir_animation_pulse(float duration);  // Scale pulse effect
IRAnimation* ir_animation_slide_in_left(float duration);
// Apply all animations to a component tree (call each frame from renderer)
void ir_animation_tree_update(IRComponent* root, float current_time);
// Container Queries (Phase 6)
void ir_set_container_type(IRStyle* style, IRContainerType type);
void ir_set_container_name(IRStyle* style, const char* name);
void ir_add_breakpoint(IRStyle* style, IRQueryCondition* conditions, uint8_t condition_count);
void ir_breakpoint_set_width(IRStyle* style, uint8_t breakpoint_index, IRDimensionType type, float value);
void ir_breakpoint_set_height(IRStyle* style, uint8_t breakpoint_index, IRDimensionType type, float value);
void ir_breakpoint_set_visible(IRStyle* style, uint8_t breakpoint_index, bool visible);
void ir_breakpoint_set_opacity(IRStyle* style, uint8_t breakpoint_index, float opacity);
void ir_breakpoint_set_layout_mode(IRStyle* style, uint8_t breakpoint_index, IRLayoutMode mode);
// Query Condition Helpers
IRQueryCondition ir_query_min_width(float value);
IRQueryCondition ir_query_max_width(float value);
IRQueryCondition ir_query_min_height(float value);
IRQueryCondition ir_query_max_height(float value);