ir/ir_core.h

// IR Component Types
typedef enum {
    IR_COMPONENT_CONTAINER,
    IR_COMPONENT_TEXT,
    IR_COMPONENT_BUTTON,
    IR_COMPONENT_INPUT,
    IR_COMPONENT_CHECKBOX,
    IR_COMPONENT_DROPDOWN,
    IR_COMPONENT_ROW,
    IR_COMPONENT_COLUMN,
    IR_COMPONENT_CENTER,
    IR_COMPONENT_IMAGE,
    IR_COMPONENT_CANVAS,
    IR_COMPONENT_MARKDOWN,
    IR_COMPONENT_CUSTOM
} IRComponentType;
// Dimension Types
typedef enum {
    IR_DIMENSION_PX,
    IR_DIMENSION_PERCENT,
    IR_DIMENSION_AUTO,
    IR_DIMENSION_FLEX,
    IR_DIMENSION_VW,        // Viewport width (1vw = 1% of viewport width)
    IR_DIMENSION_VH,        // Viewport height (1vh = 1% of viewport height)
    IR_DIMENSION_VMIN,      // Minimum of vw and vh
    IR_DIMENSION_VMAX,      // Maximum of vw and vh
    IR_DIMENSION_REM,       // Root em (relative to root font size)
    IR_DIMENSION_EM         // Em (relative to parent font size)
} IRDimensionType;
typedef struct {
    IRDimensionType type;
    float value;
} IRDimension;
// Color Types
typedef enum {
    IR_COLOR_SOLID,
    IR_COLOR_TRANSPARENT,
    IR_COLOR_GRADIENT,
    IR_COLOR_VAR_REF    // Reference to style variable
} IRColorType;
// Union for color data - either RGBA, style variable reference, or gradient pointer
typedef union IRColorData {
    struct { uint8_t r, g, b, a; };  // Direct RGBA (anonymous for convenience)
    IRStyleVarId var_id;              // Reference to style variable
    IRGradient* gradient;             // Pointer to gradient definition
} IRColorData;
typedef struct IRColor {
    IRColorType type;
    IRColorData data;
} IRColor;
// Layout Mode
typedef enum {
    IR_LAYOUT_MODE_FLEX,    // Flexbox layout (default)
    IR_LAYOUT_MODE_GRID,    // CSS Grid layout
    IR_LAYOUT_MODE_BLOCK    // Block layout (stacked)
} IRLayoutMode;
// Grid Item Placement (for child components)
typedef struct {
    int16_t row_start;     // -1 = auto
    int16_t row_end;       // -1 = auto (span 1)
    int16_t column_start;  // -1 = auto
    int16_t column_end;    // -1 = auto (span 1)

    // Alignment overrides for this specific item
    IRAlignment justify_self;  // IR_ALIGNMENT_START = use parent's justify_items
    IRAlignment align_self;    // IR_ALIGNMENT_START = use parent's align_items
} IRGridItem;
// Spacing
typedef struct {
    float top, right, bottom, left;
} IRSpacing;
// Border
typedef struct {
    float width;
    IRColor color;
    uint8_t radius;  // Border radius
} IRBorder;
// Typography
typedef struct {
    float size;
    IRColor color;
    bool bold;
    bool italic;
    char* family;  // Font family name

    // Extended typography (Phase 3)
    uint16_t weight;           // 100-900 (400=normal, 700=bold), 0=use bold flag
    float line_height;         // Line height multiplier (0=auto, 1.5=1.5x font size)
    float letter_spacing;      // Letter spacing in pixels (0=normal)
    float word_spacing;        // Word spacing in pixels (0=normal)
    IRTextAlign align;         // Text alignment
    uint8_t decoration;        // Text decoration flags (bitfield)
} IRTypography;
// Transform
typedef struct {
    float translate_x, translate_y;
    float scale_x, scale_y;
    float rotate;
} IRTransform;
// Animation Property Types
typedef enum {
    IR_ANIM_PROP_OPACITY,
    IR_ANIM_PROP_TRANSLATE_X,
    IR_ANIM_PROP_TRANSLATE_Y,
    IR_ANIM_PROP_SCALE_X,
    IR_ANIM_PROP_SCALE_Y,
    IR_ANIM_PROP_ROTATE,
    IR_ANIM_PROP_WIDTH,
    IR_ANIM_PROP_HEIGHT,
    IR_ANIM_PROP_BACKGROUND_COLOR,
    IR_ANIM_PROP_CUSTOM
} IRAnimationProperty;
// Easing Functions
typedef enum {
    IR_EASING_LINEAR,
    IR_EASING_EASE_IN,
    IR_EASING_EASE_OUT,
    IR_EASING_EASE_IN_OUT,
    IR_EASING_EASE_IN_QUAD,
    IR_EASING_EASE_OUT_QUAD,
    IR_EASING_EASE_IN_OUT_QUAD,
    IR_EASING_EASE_IN_CUBIC,
    IR_EASING_EASE_OUT_CUBIC,
    IR_EASING_EASE_IN_OUT_CUBIC,
    IR_EASING_EASE_IN_BOUNCE,
    IR_EASING_EASE_OUT_BOUNCE
} IREasingType;
typedef struct IRKeyframe {
    float offset;  // 0.0 to 1.0 (percentage of animation duration)
    IREasingType easing;  // Easing to use FROM this keyframe to next

    // Property values at this keyframe
    struct {
        IRAnimationProperty property;
        float value;  // For numeric properties
        IRColor color_value;  // For color properties
        bool is_set;
    } properties[IR_MAX_KEYFRAME_PROPERTIES];
    uint8_t property_count;
} IRKeyframe;
typedef struct IRAnimation {
    char* name;  // Animation name (for CSS @keyframes)
    float duration;  // Total duration in seconds
    float delay;  // Delay before starting
    int32_t iteration_count;  // -1 = infinite, 0 = none, >0 = count
    bool alternate;  // Alternate direction on each iteration
    IREasingType default_easing;  // Default easing if keyframe doesn't specify

    IRKeyframe keyframes[IR_MAX_KEYFRAMES];
    uint8_t keyframe_count;

    // Runtime state (not serialized)
    float current_time;
    int32_t current_iteration;
    bool is_paused;
} IRAnimation;
// Transition Definition (animate property changes)
typedef struct IRTransition {
    IRAnimationProperty property;  // Which property to transition
    float duration;  // Transition duration
    float delay;  // Delay before transition starts
    IREasingType easing;  // Easing function

    // Transition trigger - which state change triggers this
    uint32_t trigger_state;  // Bitmask of IR_PSEUDO_* states
} IRTransition;
// Text Effect Properties
typedef struct IRTextEffect {
    IRTextOverflowType overflow;
    IRTextFadeType fade_type;
    float fade_length;          // Pixels to fade (0 = no fade)
    IRTextShadow shadow;
} IRTextEffect;
// Box Shadow (for containers)
typedef struct IRBoxShadow {
    float offset_x;
    float offset_y;
    float blur_radius;
    float spread_radius;        // Positive = expand, negative = contract
    IRColor color;
    bool inset;                 // True = inset shadow, false = drop shadow
    bool enabled;
} IRBoxShadow;
typedef struct IRFilter {
    IRFilterType type;
    float value;                // Meaning depends on filter type
} IRFilter;
// Layout Constraints
typedef struct {
    IRLayoutMode mode;  // Layout algorithm to use
    IRDimension min_width, min_height;
    IRDimension max_width, max_height;
    IRFlexbox flex;     // Used when mode = IR_LAYOUT_MODE_FLEX
    IRGrid grid;        // Used when mode = IR_LAYOUT_MODE_GRID
    IRSpacing margin;
    IRSpacing padding;
    float aspect_ratio;  // Width/height ratio (0 = no constraint, 1.0 = square, 1.777 = 16:9)
} IRLayout;
// Position Mode
typedef enum {
    IR_POSITION_RELATIVE,   // Default: positioned via flexbox/flow layout
    IR_POSITION_ABSOLUTE,   // Positioned at explicit x/y coordinates
    IR_POSITION_FIXED       // Fixed positioning (relative to viewport)
} IRPositionMode;
// Overflow Handling
typedef enum {
    IR_OVERFLOW_VISIBLE,    // Content not clipped (default)
    IR_OVERFLOW_HIDDEN,     // Content clipped, no scrolling
    IR_OVERFLOW_SCROLL,     // Scrollbars always shown
    IR_OVERFLOW_AUTO        // Scrollbars shown only when needed
} IROverflowMode;
// Media Query / Container Query Types
typedef enum {
    IR_QUERY_MIN_WIDTH,
    IR_QUERY_MAX_WIDTH,
    IR_QUERY_MIN_HEIGHT,
    IR_QUERY_MAX_HEIGHT
} IRQueryType;
typedef struct {
    IRQueryType type;
    float value;  // Breakpoint value in pixels
} IRQueryCondition;
// Breakpoint-specific styles
#define IR_MAX_BREAKPOINTS 4
#define IR_MAX_QUERY_CONDITIONS 2  // e.g., min-width AND max-width
typedef struct IRBreakpoint {
    IRQueryCondition conditions[IR_MAX_QUERY_CONDITIONS];
    uint8_t condition_count;

    // Style overrides for this breakpoint
    IRDimension width;
    IRDimension height;
    bool visible;  // Can hide/show at breakpoints
    float opacity;

    // Layout overrides
    IRLayoutMode layout_mode;
    bool has_layout_mode;  // Whether to override parent layout mode
} IRBreakpoint;
// Container Query Context
typedef enum {
    IR_CONTAINER_TYPE_NORMAL,      // Not a container query context
    IR_CONTAINER_TYPE_SIZE,        // Container query on size
    IR_CONTAINER_TYPE_INLINE_SIZE  // Container query on inline size only
} IRContainerType;
// Pseudo-class specific styles
typedef struct {
    IRPseudoState state;           // Which pseudo-class this applies to

    // Style overrides when in this state
    IRColor background;
    IRColor text_color;
    IRColor border_color;
    float opacity;
    IRTransform transform;         // For hover effects like scale/translate

    bool has_background;
    bool has_text_color;
    bool has_border_color;
    bool has_opacity;
    bool has_transform;
} IRPseudoStyle;
// Style Properties
typedef struct IRStyle {
    IRDimension width, height;
    IRColor background;
    IRColor border_color;
    IRBorder border;
    IRSpacing margin, padding;
    IRTypography font;
    IRTransform transform;
    IRAnimation** animations;  // Array of pointers to animations
    uint32_t animation_count;
    IRTransition** transitions;  // Array of pointers to transitions
    uint32_t transition_count;
    uint32_t z_index;
    bool visible;
    float opacity;
    // Positioning
    IRPositionMode position_mode;
    float absolute_x;
    float absolute_y;
    // Overflow handling
    IROverflowMode overflow_x;
    IROverflowMode overflow_y;
    // Grid item placement (when parent uses grid layout)
    IRGridItem grid_item;
    // Text effects
    IRTextEffect text_effect;
    // Box shadow
    IRBoxShadow box_shadow;
    // CSS Filters
    IRFilter filters[IR_MAX_FILTERS];
    uint8_t filter_count;
    // Responsive design
    IRBreakpoint breakpoints[IR_MAX_BREAKPOINTS];
    uint8_t breakpoint_count;
    // Container query context (if this component is a container)
    IRContainerType container_type;
    char* container_name;  // Optional name for nested container queries
    // Pseudo-class styles
    IRPseudoStyle pseudo_styles[IR_MAX_PSEUDO_STYLES];
    uint8_t pseudo_style_count;
    // Current active pseudo-states (bitfield)
    uint32_t current_pseudo_states;
} IRStyle;
// Event Handler
typedef struct IREvent {
    IREventType type;
    char* logic_id;      // References IRLogic
    char* handler_data;  // Event-specific data
    struct IREvent* next;
} IREvent;
// Business Logic Container
typedef struct IRLogic {
    char* id;
    char* source_code;
    LogicSourceType type;
    struct IRLogic* next;
} IRLogic;
// Layout cache for performance optimization
typedef struct {
    bool dirty;                          // Cache invalid flag
    float cached_intrinsic_width;        // Cached intrinsic width
    float cached_intrinsic_height;       // Cached intrinsic height
    uint32_t cache_generation;           // Generation counter for invalidation
} IRLayoutCache;
// Rendered bounds cache (filled during layout/render)
typedef struct IRRenderedBounds {
    float x, y, width, height;
    bool valid;  // true if bounds have been calculated
} IRRenderedBounds;
// Main IR Component
typedef struct IRComponent {
    uint32_t id;
    IRComponentType type;
    char* tag;           // HTML tag for web, custom identifier
    IRStyle* style;
    IREvent* events;
    IRLogic* logic;
    struct IRComponent** children;
    uint32_t child_count;
    uint32_t child_capacity;  // Allocated capacity for exponential growth
    IRLayout* layout;
    struct IRComponent* parent;
    char* text_content;  // For text components
    char* custom_data;   // For custom components
    IRRenderedBounds rendered_bounds;  // Cached layout bounds
    IRLayoutCache layout_cache;        // Performance cache for layout
    uint32_t dirty_flags;              // Dirty tracking for incremental updates
    bool has_active_animations;        // OPTIMIZATION: Track if this subtree has animations (80% reduction)
} IRComponent;