ir/include/ir_serialization.h

void ir_print_component_info(IRComponent* component, int depth);