bindings/nim/ir_core.nim


# Color helpers
proc ir_rgb*(r: uint8; g: uint8; b: uint8): IRColor =
  result.r = r
  result.g = g
  result.b = b
  result.a = 255

proc ir_rgba*(r: uint8; g: uint8; b: uint8; a: uint8): IRColor =
  result.r = r
  result.g = g
  result.b = b
  result.a = a

proc ir_hex*(hex: uint32): IRColor =
  result.r = uint8((hex shr 16) and 0xFF)
  result.g = uint8((hex shr 8) and 0xFF)
  result.b = uint8(hex and 0xFF)
  result.a = 255

# Spacing helpers
proc ir_spacing_all*(value: cfloat): IRSpacing =
  result.top = value
  result.right = value
  result.bottom = value
  result.left = value

proc ir_spacing_xy*(x: cfloat; y: cfloat): IRSpacing =
  result.top = y
  result.right = x
  result.bottom = y
  result.left = x

proc ir_spacing_custom*(top: cfloat; right: cfloat; bottom: cfloat; left: cfloat): IRSpacing =
  result.top = top
  result.right = right
  result.bottom = bottom
  result.left = left

# Validation
proc ir_validate_component*(component: ptr IRComponent): bool {.importc, cdecl, header: "ir_core.h".}
proc ir_print_component_info*(component: ptr IRComponent; depth: cint) {.importc, cdecl, header: "ir_core.h".}
proc ir_optimize_component*(component: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}

# Debug Renderer
proc debug_print_tree*(root: ptr IRComponent) {.importc, cdecl, header: "debug_backend.h".}
proc debug_print_tree_to_file*(root: ptr IRComponent; filename: cstring) {.importc, cdecl, header: "debug_backend.h".}

# Hit Testing
proc ir_is_point_in_component*(component: ptr IRComponent; x: cfloat; y: cfloat): bool {.importc, cdecl, header: "ir_builder.h".}
proc ir_find_component_at_point*(root: ptr IRComponent; x: cfloat; y: cfloat): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_rendered_bounds*(component: ptr IRComponent; x: cfloat; y: cfloat; width: cfloat; height: cfloat) {.importc, cdecl, header: "ir_builder.h".}

# Dropdown functions
proc ir_dropdown*(placeholder: cstring; options: ptr cstring; option_count: uint32): ptr IRComponent {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_dropdown_selected_index*(component: ptr IRComponent): int32 {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_dropdown_selected_index*(component: ptr IRComponent; index: int32) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_dropdown_options*(component: ptr IRComponent; options: ptr cstring; count: uint32) {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_dropdown_open_state*(component: ptr IRComponent): bool {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_dropdown_open_state*(component: ptr IRComponent; is_open: bool) {.importc, cdecl, header: "ir_builder.h".}
proc ir_toggle_dropdown_open_state*(component: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}
proc ir_get_dropdown_hovered_index*(component: ptr IRComponent): int32 {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_dropdown_hovered_index*(component: ptr IRComponent; index: int32) {.importc, cdecl, header: "ir_builder.h".}

# ============================================================================
# Animation System
# ============================================================================

type
  IREasingType* {.size: sizeof(cint).} = enum
    IR_EASING_LINEAR = 0
    IR_EASING_EASE_IN
    IR_EASING_EASE_OUT
    IR_EASING_EASE_IN_OUT
    IR_EASING_EASE_IN_QUAD
    IR_EASING_EASE_OUT_QUAD
    IR_EASING_EASE_IN_OUT_QUAD
    IR_EASING_EASE_IN_CUBIC
    IR_EASING_EASE_OUT_CUBIC
    IR_EASING_EASE_IN_OUT_CUBIC
    IR_EASING_EASE_IN_BOUNCE
    IR_EASING_EASE_OUT_BOUNCE

  IRAnimationProperty* {.size: sizeof(cint).} = enum
    IR_ANIM_PROP_OPACITY = 0
    IR_ANIM_PROP_TRANSLATE_X
    IR_ANIM_PROP_TRANSLATE_Y
    IR_ANIM_PROP_SCALE_X
    IR_ANIM_PROP_SCALE_Y
    IR_ANIM_PROP_ROTATE
    IR_ANIM_PROP_WIDTH
    IR_ANIM_PROP_HEIGHT
    IR_ANIM_PROP_BACKGROUND_COLOR
    IR_ANIM_PROP_CUSTOM

  IRKeyframe* {.importc: "IRKeyframe", header: "ir_core.h", incompleteStruct.} = object
  IRAnimation* {.importc: "IRAnimation", header: "ir_core.h", incompleteStruct.} = object
  IRTransition* {.importc: "IRTransition", header: "ir_core.h", incompleteStruct.} = object

# Animation creation and management
proc ir_animation_create_keyframe*(name: cstring; duration: cfloat): ptr IRAnimation {.importc, cdecl, header: "ir_builder.h".}
proc ir_animation_add_keyframe*(anim: ptr IRAnimation; offset: cfloat): ptr IRKeyframe {.importc, cdecl, header: "ir_builder.h".}
proc ir_keyframe_set_property*(kf: ptr IRKeyframe; prop: IRAnimationProperty; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_keyframe_set_color_property*(kf: ptr IRKeyframe; prop: IRAnimationProperty; color: IRColor) {.importc, cdecl, header: "ir_builder.h".}

# Animation configuration
proc ir_animation_set_delay*(anim: ptr IRAnimation; delay: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_animation_set_iterations*(anim: ptr IRAnimation; iterations: int32) {.importc, cdecl, header: "ir_builder.h".}
proc ir_animation_set_alternate*(anim: ptr IRAnimation; alternate: bool) {.importc, cdecl, header: "ir_builder.h".}
proc ir_animation_set_default_easing*(anim: ptr IRAnimation; easing: IREasingType) {.importc, cdecl, header: "ir_builder.h".}

# Attach animations to components
proc ir_component_add_animation*(component: ptr IRComponent; anim: ptr IRAnimation) {.importc, cdecl, header: "ir_builder.h".}

# Helper animation creators
proc ir_animation_fade_in_out*(duration: cfloat): ptr IRAnimation {.importc, cdecl, header: "ir_builder.h".}
proc ir_animation_pulse*(duration: cfloat): ptr IRAnimation {.importc, cdecl, header: "ir_builder.h".}
proc ir_animation_slide_in_left*(duration: cfloat): ptr IRAnimation {.importc, cdecl, header: "ir_builder.h".}

# Tree-wide animation update (call once per frame with current time)
proc ir_animation_tree_update*(root: ptr IRComponent; current_time: cfloat) {.importc, cdecl, header: "ir_builder.h".}

# Re-propagate animation flags after tree construction (call once after building tree)
proc ir_animation_propagate_flags*(root: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}

# General component subtree finalization (call after adding children, especially from static loops)
proc ir_component_finalize_subtree*(component: ptr IRComponent) {.importc, cdecl, header: "ir_builder.h".}

# Transitions (Phase 6)
proc ir_transition_create*(property: IRAnimationProperty; duration: cfloat): ptr IRTransition {.importc, cdecl, header: "ir_builder.h".}
proc ir_transition_destroy*(transition: ptr IRTransition) {.importc, cdecl, header: "ir_builder.h".}
proc ir_transition_set_easing*(transition: ptr IRTransition; easing: IREasingType) {.importc, cdecl, header: "ir_builder.h".}
proc ir_transition_set_delay*(transition: ptr IRTransition; delay: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_transition_set_trigger*(transition: ptr IRTransition; state_mask: uint32) {.importc, cdecl, header: "ir_builder.h".}
proc ir_component_add_transition*(component: ptr IRComponent; transition: ptr IRTransition) {.importc, cdecl, header: "ir_builder.h".}

# Container Queries (Phase 7)
type IRQueryType* {.size: sizeof(cint).} = enum
  IR_QUERY_MIN_WIDTH
  IR_QUERY_MAX_WIDTH
  IR_QUERY_MIN_HEIGHT
  IR_QUERY_MAX_HEIGHT

type IRContainerType* {.size: sizeof(cint).} = enum
  IR_CONTAINER_TYPE_NORMAL
  IR_CONTAINER_TYPE_SIZE
  IR_CONTAINER_TYPE_INLINE_SIZE

type IRQueryCondition* {.importc: "IRQueryCondition", header: "ir_core.h".} = object
  `type`*: IRQueryType
  value*: cfloat

# Constants
const
  IR_MAX_BREAKPOINTS* = 4
  IR_MAX_QUERY_CONDITIONS* = 2

# Container setup functions
proc ir_set_container_type*(style: ptr IRStyle; container_type: IRContainerType) {.importc, cdecl, header: "ir_builder.h".}
proc ir_set_container_name*(style: ptr IRStyle; name: cstring) {.importc, cdecl, header: "ir_builder.h".}

# Query condition builder functions
proc ir_query_min_width*(value: cfloat): IRQueryCondition {.importc, cdecl, header: "ir_builder.h".}
proc ir_query_max_width*(value: cfloat): IRQueryCondition {.importc, cdecl, header: "ir_builder.h".}
proc ir_query_min_height*(value: cfloat): IRQueryCondition {.importc, cdecl, header: "ir_builder.h".}
proc ir_query_max_height*(value: cfloat): IRQueryCondition {.importc, cdecl, header: "ir_builder.h".}

# Breakpoint management functions
proc ir_add_breakpoint*(style: ptr IRStyle; conditions: ptr IRQueryCondition; condition_count: uint8) {.importc, cdecl, header: "ir_builder.h".}
proc ir_breakpoint_set_width*(style: ptr IRStyle; breakpoint_index: uint8; dim_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_breakpoint_set_height*(style: ptr IRStyle; breakpoint_index: uint8; dim_type: IRDimensionType; value: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_breakpoint_set_visible*(style: ptr IRStyle; breakpoint_index: uint8; visible: bool) {.importc, cdecl, header: "ir_builder.h".}
proc ir_breakpoint_set_opacity*(style: ptr IRStyle; breakpoint_index: uint8; opacity: cfloat) {.importc, cdecl, header: "ir_builder.h".}
proc ir_breakpoint_set_layout_mode*(style: ptr IRStyle; breakpoint_index: uint8; mode: IRLayoutMode) {.importc, cdecl, header: "ir_builder.h".}
